# Text-to-SQL

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
data/: student.db  t2s_log.db
docs/: architecture.md
scripts/: seed_student_db.py
t2s/: config.py
t2s/db/: __init__.py  runner.py
t2s/logging/: __init__.py  query_log.py
t2s/providers/: base.py  factory.py  groq.py  ollama.py
t2s/security/: __init__.py  rate_limit.py
t2s/sql/: __init__.py  prompting.py  safety.py  schema.py  service.py
tests/: test_safety.py
ui/: app.py
